@@ -1,7 +1,7 @@
 /*! \file LogHelper.h
- *  \brief Define logging macros such as X3LOG_WARNING and X3LogGroup.
+ *  \brief Define logging macros such as X3LOG_WARNING and X3LOG_GROUP.
  *  \author Zhang Yungui, X3 C++ PluginFramework
- *  \date   2011.07.01
+ *  \date   2011.11.08
  */
 #ifndef X3_LOG_LOGHELPER_H_
 #define X3_LOG_LOGHELPER_H_
@@ -25,7 +25,8 @@
 //
 // x3::RegisterLogObserver(Ix_LogObserver* observer)
 // x3::UnRegisterLogObserver(Ix_LogObserver* observer)
-// X3LogGroup(msg)
+// X3LOG_GROUP(name)
+// X3LOG_GROUP2(name, extra)
 
 
 //! Output a debug info.
@@ -34,7 +35,7 @@
     \param msg logging text, can be UNICODE string or other type number (not ANSI string).
         if the first char is '@' and leading as 'Module:StrID' format,
         then the manager will translate into localization text.
-    \see X3LOG_DEBUG2, X3LogGroup
+    \see X3LOG_DEBUG2, X3LOG_GROUP
 */
 #define X3LOG_DEBUG(msg)  \
     X3LOG_EVENT_(msg, x3LogType_Debug, __FILE__, __LINE__)
@@ -45,7 +46,7 @@
     \ingroup _GROUP_PLUGIN_LOG_
     \param name UNICODE string, the first char is '@' and leading as 'Module:StrID' format.
     \param extra additional context info, can be UNICODE string or other type number (not ANSI string).
-    \see X3LOG_INFO, X3LOG_DEBUG, X3LogGroup
+    \see X3LOG_INFO, X3LOG_DEBUG, X3LOG_GROUP
 */
 #define X3LOG_DEBUG2(name, extra)     \
     X3LOG_EVENT_2(name, extra, x3LogType_Debug, __FILE__, __LINE__)
@@ -57,7 +58,7 @@
     \param msg logging text, can be UNICODE string or other type number (not ANSI string).
         if the first char is '@' and leading as 'Module:StrID' format,
         then the manager will translate into localization text.
-    \see X3LOG_INFO2, X3LogGroup
+    \see X3LOG_INFO2, X3LOG_GROUP
 */
 #define X3LOG_INFO(msg)   \
     X3LOG_EVENT_(msg, x3LogType_Info, __FILE__, __LINE__)
@@ -68,7 +69,7 @@
     \ingroup _GROUP_PLUGIN_LOG_
     \param name UNICODE string, the first char is '@' and leading as 'Module:StrID' format.
     \param extra additional context info, can be UNICODE string or other type number (not ANSI string).
-    \see X3LOG_WARNING2, X3LOG_INFO, X3LogGroup
+    \see X3LOG_WARNING2, X3LOG_INFO, X3LOG_GROUP
 */
 #define X3LOG_INFO2(name, extra)  \
     X3LOG_EVENT_2(name, extra, x3LogType_Info, __FILE__, __LINE__)
@@ -80,7 +81,7 @@
     \param msg logging text, can be UNICODE string or other type number (not ANSI string).
         if the first char is '@' and leading as 'Module:StrID' format,
         then the manager will translate into localization text.
-    \see X3LOG_WARNING2, X3LOG_INFO2, X3LogGroup
+    \see X3LOG_WARNING2, X3LOG_INFO2, X3LOG_GROUP
 */
 #define X3LOG_WARNING(msg)        \
     X3LOG_EVENT_(msg, x3LogType_Warning, __FILE__, __LINE__)
@@ -91,7 +92,7 @@
     \ingroup _GROUP_PLUGIN_LOG_
     \param name UNICODE string, the first char is '@' and leading as 'Module:StrID' format.
     \param extra additional context info, can be UNICODE string or other type number (not ANSI string).
-    \see X3LOG_ERROR2, X3LogGroup
+    \see X3LOG_ERROR2, X3LOG_GROUP
 */
 #define X3LOG_WARNING2(name, extra)   \
     X3LOG_EVENT_2(name, extra, x3LogType_Warning, __FILE__, __LINE__)
@@ -103,7 +104,7 @@
     \param msg logging text, can be UNICODE string or other type number (not ANSI string).
         if the first char is '@' and leading as 'Module:StrID' format,
         then the manager will translate into localization text.
-    \see X3LOG_ERROR2, X3LogGroup
+    \see X3LOG_ERROR2, X3LOG_GROUP
 */
 #define X3LOG_ERROR(msg)  \
     X3LOG_EVENT_(msg, x3LogType_Error, __FILE__, __LINE__)
@@ -114,7 +115,7 @@
     \ingroup _GROUP_PLUGIN_LOG_
     \param name UNICODE string, the first char is '@' and leading as 'Module:StrID' format.
     \param extra additional context info, can be UNICODE string or other type number (not ANSI string).
-    \see X3LOG_WARNING2, X3LogGroup
+    \see X3LOG_WARNING2, X3LOG_GROUP
 */
 #define X3LOG_ERROR2(name, extra)     \
     X3LOG_EVENT_2(name, extra, x3LogType_Error, __FILE__, __LINE__)
@@ -126,7 +127,7 @@
     \param msg logging text, can be UNICODE string or other type number (not ANSI string).
         if the first char is '@' and leading as 'Module:StrID' format,
         then the manager will translate into localization text.
-    \see X3LOG_FATAL2, X3LogGroup
+    \see X3LOG_FATAL2, X3LOG_GROUP
 */
 #define X3LOG_FATAL(msg)      \
     X3LOG_EVENT_(msg, x3LogType_Fatal, __FILE__, __LINE__)
@@ -137,7 +138,7 @@
     \ingroup _GROUP_PLUGIN_LOG_
     \param name UNICODE string, the first char is '@' and leading as 'Module:StrID' format.
     \param extra additional context info, can be UNICODE string or other type number (not ANSI string).
-    \see X3LOG_ERROR2, X3LogGroup
+    \see X3LOG_ERROR2, X3LOG_GROUP
 */
 #define X3LOG_FATAL2(name, extra)     \
     X3LOG_EVENT_2(name, extra, x3LogType_Fatal, __FILE__, __LINE__)
@@ -176,6 +177,27 @@ inline void UnRegisterLogObserver(Ix_LogObserver* observer)
 
 } // x3
 
+//! Helper macro for logging group, auto begin and end group.
+/*! Use this macro in local function, eg:
+    \code
+    void MyFunc()
+    {
+        X3LOG_GROUP(L"@MyPlugin:GROUP_MYNAME");
+        X3LOG_INFO2(L"@MyPlugin:IDS_DO_THING", value);
+        ...
+        X3LOG_GROUP2(L"@MyPlugin:GROUP_MYNAME", "info...");
+    }
+    \endcode
+    \ingroup _GROUP_PLUGIN_LOG_
+    \param name UNICODE string, the first char is '@' and leading as 'Module:StrID' format.
+    \param extra additional context info, can be UNICODE string or other type number (not ANSI string).
+    \see X3LOG_GROUP2, X3LOG_ERROR
+*/
+#define X3LOG_GROUP(name, extra)    \
+    X3LOG_GROUP2(name, NULL)
+#define X3LOG_GROUP2(name, extra)   \
+    X3LogGroup group##__LINE__(name, extra, __FILE__, __LINE__)
+
 //! Helper class for logging group, auto begin and end group.
 /*! Use this class to define variable in local function, eg:
     \code
@@ -186,7 +208,6 @@ inline void UnRegisterLogObserver(Ix_LogObserver* observer)
         ...
     }
     \endcode
-    \ingroup _GROUP_PLUGIN_LOG_
 */
 class X3LogGroup
 {
@@ -197,13 +218,16 @@ public:
             if the first char is '@' and leading as 'Module:StrID' format
             then the manager will translate into localization text using Ix_StringTable.
         \param extra additional context info.
+        \param file source file name, __FILE__
+        \param line code line, __LINE__
     */
-    X3LogGroup(const wchar_t* msg, const wchar_t* extra = NULL)
+    X3LogGroup(const wchar_t* msg, const wchar_t* extra = NULL,
+        const char* file = NULL, long line = 0)
     {
         Cx_Interface<Ix_LogManager> pIFManager(x3::CLSID_LogManager);
         if (pIFManager.IsNotNull())
         {
-            pIFManager->PushGroup(msg, extra);
+            pIFManager->PushGroup(msg, extra, file, line);
         }
     }
     //! Destructor, auto end the logging group.
