@@ -4,6 +4,8 @@ x3c - C++ Plugin Framework
 
     * Add GetLogObserver() export function in LogWriter.plugin
     * Auto call x3UninitializePlugin() when a plugin is unloading.
+    * LogWriter.plugin: Can work regardless no PluginManager, FileUtility or TextUtility plugins.
+    * LogHelper.h: Add X3LOG_GROUP(name) and X3LOG_GROUP2(name, extra).
 
 2011-11-01
 
